--- a/VirtualScene.Application.WPF/Views/MainWindowView.xaml
+++ b/VirtualScene.Application.WPF/Views/MainWindowView.xaml
@@ -8,7 +8,10 @@
         <StackPanel Orientation="Horizontal" Height="50">
             <WrapPanel x:Name="TopPanel" />
         </StackPanel>
+        <StackPanel Orientation="Horizontal">
         <wpf:SceneViewportView SceneContent="{Binding SceneContent}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <wpf:SceneViewportView SceneContent="{Binding SceneContent}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        </StackPanel>
 
     </StackPanel>
 </Window>
