--- a/VirtualScene.Application.WPF/Views/MainWindowView.xaml
+++ b/VirtualScene.Application.WPF/Views/MainWindowView.xaml
@@ -3,13 +3,24 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wpf="clr-namespace:VirtualScene.PresentationComponents.WPF;assembly=VirtualScene.PresentationComponents.WPF"
         xmlns:properties="clr-namespace:VirtualScene.Application.WPF.Properties"
+        xmlns:views="clr-namespace:VirtualScene.PresentationComponents.WPF.Views;assembly=VirtualScene.PresentationComponents.WPF"
         Title="{x:Static properties:Resources.Title_Application}" Height="524" Width="840">
-    <StackPanel>
+    <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Horizontal" Height="50">
             <WrapPanel x:Name="TopPanel" />
         </StackPanel>
-        <Grid>
-            <wpf:SceneViewportView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="300"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="300"></RowDefinition>
+            </Grid.RowDefinitions>
+            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" />
+            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Grid.Row="0" />
+            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Grid.Row="1" />
         </Grid>
 
     </StackPanel>
