--- a/VirtualScene.PresentationComponents.WPF/Views/SceneViewportView.xaml
+++ b/VirtualScene.PresentationComponents.WPF/Views/SceneViewportView.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl xmlns:WPF="clr-namespace:SharpGL.WPF;assembly=SharpGL.WPF"  x:Class="VirtualScene.PresentationComponents.WPF.SceneViewportView"
+﻿<UserControl xmlns:Views="clr-namespace:VirtualScene.PresentationComponents.WPF.Views"  xmlns:WPF="clr-namespace:SharpGL.WPF;assembly=SharpGL.WPF"  x:Class="VirtualScene.PresentationComponents.WPF.Views.SceneViewportView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Grid.ContextMenu>
+    <StackPanel>
+        <StackPanel.ContextMenu>
             <ContextMenu ItemsSource="{Binding ViewportContextMenu}">
             </ContextMenu>
-        </Grid.ContextMenu>
-         <WPF:SceneView x:Name="SceneView" />
-    </Grid>
+        </StackPanel.ContextMenu>
+        <Views:SceneViewControl x:Name="SceneViewControl" SceneResizeEnabled="False" />
+    </StackPanel>
 </UserControl>
