Logic from SceneViewControl was extracted to SceneViewModel

--- a/VirtualScene.PresentationComponents.WPF/Views/SceneViewportView.xaml
+++ b/VirtualScene.PresentationComponents.WPF/Views/SceneViewportView.xaml
@@ -10,6 +10,6 @@
             <ContextMenu ItemsSource="{Binding ViewportContextMenu}">
             </ContextMenu>
         </StackPanel.ContextMenu>
-        <Views:SceneViewControl x:Name="SceneViewControl" SceneResizeEnabled="False" />
+        <Views:SceneViewControl x:Name="SceneViewControl" />
     </StackPanel>
 </UserControl>
