--- a/VirtualScene.PresentationComponents.WPF/Views/Import3DModelView.xaml
+++ b/VirtualScene.PresentationComponents.WPF/Views/Import3DModelView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:properties="clr-namespace:VirtualScene.PresentationComponents.WPF.Properties"
-        Title="{x:Static properties:Resources.Title_Import_3D_model}" Height="140" Width="390" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="{x:Static properties:Resources.Title_Import_3D_model}" Height="152" Width="390" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid Margin="6">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -21,8 +21,8 @@
             <Button Content=". . ." Command="{Binding OpenFileCommand}" Width="32" Height="26" ></Button>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" Margin="6">
-            <Button Content="{x:Static properties:Resources.Title_Import}" Margin="3" Height="26" Width="60"></Button>
-            <Button Content="{x:Static properties:Resources.Title_Cancel}" Margin="3" Height="26" Width="60"></Button>
+            <Button Content="{x:Static properties:Resources.Title_Import}" Command="{Binding ImportCommand}" Margin="3" Height="26" Width="60"></Button>
+            <Button Content="{x:Static properties:Resources.Title_Cancel}" Command="{Binding CancelCommand}" Margin="3" Height="26" Width="60"></Button>
         </StackPanel>
     </Grid>
 </Window>
