--- a/VirtualScene.Application.WPF/Views/MainWindowView.xaml
+++ b/VirtualScene.Application.WPF/Views/MainWindowView.xaml
@@ -1,16 +1,16 @@
 ﻿<Window x:Class="VirtualScene.Application.WPF.Views.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:wpf="clr-namespace:VirtualScene.PresentationComponents.WPF;assembly=VirtualScene.PresentationComponents.WPF"
         xmlns:properties="clr-namespace:VirtualScene.Application.WPF.Properties"
         xmlns:views="clr-namespace:VirtualScene.PresentationComponents.WPF.Views;assembly=VirtualScene.PresentationComponents.WPF"
-        Title="{x:Static properties:Resources.Title_Application}" Height="524" Width="840">
+        Title="{x:Static properties:Resources.Title_Application}" Height="536" Width="1058">
     <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Horizontal" Height="50">
             <WrapPanel x:Name="TopPanel" />
         </StackPanel>
         <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="300"></ColumnDefinition>
             </Grid.ColumnDefinitions>
@@ -18,9 +18,19 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="300"></RowDefinition>
             </Grid.RowDefinitions>
-            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" />
-            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Grid.Row="0" />
-            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Grid.Row="1" />
+            <Grid Grid.Column="0" Grid.RowSpan="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="5"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <ContentControl Content="{Binding ContentView1}" Grid.Row="0" MinHeight="100" />
+                <GridSplitter Grid.Row="1"></GridSplitter>
+                <ContentControl Content="{Binding ContentView2}" Grid.Row="2" MinHeight="100"/>
+            </Grid>
+            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Grid.RowSpan="2" />
+            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="2" Grid.Row="0" />
+            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="2" Grid.Row="1" />
         </Grid>
 
     </StackPanel>
