--- a/VirtualScene.Application.WPF/Views/MainWindowView.xaml
+++ b/VirtualScene.Application.WPF/Views/MainWindowView.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:properties="clr-namespace:VirtualScene.Application.WPF.Properties"
-        xmlns:views="clr-namespace:VirtualScene.PresentationComponents.WPF.Views;assembly=VirtualScene.PresentationComponents.WPF"
         Title="{x:Static properties:Resources.Title_Application}" Height="536" Width="1058">
     <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Horizontal" Height="50">
@@ -28,9 +27,9 @@
                 <GridSplitter Grid.Row="1"></GridSplitter>
                 <ContentControl Content="{Binding ContentView2}" Grid.Row="2" MinHeight="100"/>
             </Grid>
-            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Grid.RowSpan="2" />
-            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="2" Grid.Row="0" />
-            <views:SceneViewportView HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="2" Grid.Row="1" />
+            <ContentControl Content="{Binding ContentView3}" HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" />
+            <ContentControl Content="{Binding ContentView4}" HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="2" Grid.Row="0" />
+            <ContentControl Content="{Binding ContentView5}" HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="2" Grid.Row="1" />
         </Grid>
 
     </StackPanel>
