--- a/VirtualScene.PresentationComponents.WPF/Views/OperationFailedView.xaml
+++ b/VirtualScene.PresentationComponents.WPF/Views/OperationFailedView.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="VirtualScene.PresentationComponents.WPF.Views.EntityNameDialogView"
+﻿<Window x:Class="VirtualScene.PresentationComponents.WPF.Views.OperationFailedView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:properties="clr-namespace:VirtualScene.PresentationComponents.WPF.Properties"
-        Title="{Binding Title}" Height="136" Width="310" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="{Binding Title}" Height="215" Width="398" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <StackPanel Orientation="Vertical">
-        <StackPanel Orientation="Horizontal" Margin="10" >
-            <Label Content="{x:Static properties:Resources.Title_Name}"></Label>
-            <TextBox Text="{Binding Name}" Width="240"></TextBox>
+        <StackPanel Orientation="Vertical" Margin="10" >
+            <Label Content="{x:Static properties:Resources.Title_Details}"></Label>
+            <ListBox ItemsSource="{Binding Errors}" Height="100"></ListBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-            <Button Content="{x:Static properties:Resources.Title_OK}" Command="{Binding AcceptCommand}" Width="60"></Button>
+            <Button Content="{x:Static properties:Resources.Title_Repeat}" Command="{Binding RepeatCommand}" Width="60"></Button>
             <Button Content="{x:Static properties:Resources.Title_Cancel}" Command="{Binding CancelCommand}" Width="60"></Button>
         </StackPanel>
     </StackPanel>
