Classes were rearranged

--- a/VirtualScene.ApplicationPresentationComponents.WPF/Views/MainEntityContentView.xaml
+++ b/VirtualScene.ApplicationPresentationComponents.WPF/Views/MainEntityContentView.xaml
@@ -4,10 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:entities="clr-namespace:VirtualScene.BusinessComponents.Core;assembly=VirtualScene.BusinessComponents.Core"
+             xmlns:entities2="clr-namespace:VirtualScene.BusinessComponents.Core.Entities;assembly=VirtualScene.BusinessComponents.Core"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
-        <DataTemplate x:Key="ContentTypes" DataType="{x:Type entities:Stage}">
+        <DataTemplate x:Key="ContentTypes" DataType="{x:Type entities2:Stage}">
             <Label Content="{Binding Name}"></Label>
         </DataTemplate>
     </UserControl.Resources>
