--- a/VirtualScene.EntityPresentationComponents.WPF/Views/StageContentView.xaml
+++ b/VirtualScene.EntityPresentationComponents.WPF/Views/StageContentView.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:src="clr-namespace:VirtualScene.BusinessComponents.Core.Entities;assembly=VirtualScene.BusinessComponents.Core"
              xmlns:entities="clr-namespace:VirtualScene.BusinessComponents.Core.Entities;assembly=VirtualScene.BusinessComponents.Core"
+             xmlns:entities1="clr-namespace:VirtualScene.Entities;assembly=VirtualScene.Entities"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
-        <DataTemplate x:Key="ContentTypes" DataType="{x:Type entities:ISceneEntity}">
+        <DataTemplate x:Key="ContentTypes" DataType="{x:Type entities1:ISceneEntity}">
             <Label Content="{Binding Geometry.Name}"></Label>
         </DataTemplate>
     </UserControl.Resources>
