--- a/VirtualScene.EntityPresentationComponents.WPF/Views/StageContentView.xaml
+++ b/VirtualScene.EntityPresentationComponents.WPF/Views/StageContentView.xaml
@@ -3,9 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:src="clr-namespace:VirtualScene.BusinessComponents.Core.Entities;assembly=VirtualScene.BusinessComponents.Core"
-             xmlns:entities="clr-namespace:VirtualScene.BusinessComponents.Core.Entities;assembly=VirtualScene.BusinessComponents.Core"
              xmlns:entities1="clr-namespace:VirtualScene.Entities;assembly=VirtualScene.Entities"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -15,6 +14,15 @@
     </UserControl.Resources>
     <StackPanel Orientation="Vertical">
         <Label Content="{Binding Title}" Height="26" Background="#FFF5E7E7"></Label>
-        <TreeView ItemsSource="{Binding Stage.Items}" ItemTemplate="{StaticResource ContentTypes}" Height="200"></TreeView>
+        <ListBox x:Name="StageListTreeView" ItemsSource="{Binding Stage.Items}" ItemTemplate="{StaticResource ContentTypes}" Height="200">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged" >
+                    <i:InvokeCommandAction Command="{Binding SelectItemsCommand}" 
+                                           CommandParameter="{Binding ElementName=StageListTreeView, Path=SelectedItems}" >
+
+                    </i:InvokeCommandAction>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListBox>
     </StackPanel>
 </UserControl>
