--- a/VirtualScene.EntityPresentationComponents.WPF/Views/SceneEntityContentView.xaml
+++ b/VirtualScene.EntityPresentationComponents.WPF/Views/SceneEntityContentView.xaml
@@ -13,14 +13,14 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" MinHeight="30"></RowDefinition>
-            <RowDefinition Height="Auto" MinHeight="30"></RowDefinition>
-            <RowDefinition Height="Auto" MinHeight="30"></RowDefinition>
+            <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+            <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+            <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
         </Grid.RowDefinitions>
-        <Label Content="{Binding Title}" Height="26" Background="#FFF5E7E7"  Grid.Row="0" Grid.ColumnSpan="2" ></Label>
-        <Label Content="{x:Static properties:Resources.Title_Name}" Grid.Row="1" Grid.Column="0" ></Label>
-        <TextBox Text="{Binding Name}" Grid.Row="1" Grid.Column="1" Height="26" ></TextBox>
-        <Label Content="{x:Static entityProperties:Resources.Title_Geometry_Type}" Grid.Row="2" Grid.Column="0" ></Label>
-        <TextBox Text="{Binding GeometryType}" Grid.Row="2" Grid.Column="1" Height="26" ></TextBox>
+        <Label Content="{Binding Title}" Background="#FFF5E7E7"  Grid.Row="0" Grid.ColumnSpan="2" ></Label>
+        <Label Content="{x:Static entityProperties:Resources.Title_Description}" Grid.Row="1" Grid.Column="0" ></Label>
+        <TextBox Text="{Binding Path=SceneEntity.Description, Mode=OneWay}" IsReadOnly="True" Grid.Row="1" Grid.Column="1" ></TextBox>
+        <Label Content="{x:Static properties:Resources.Title_Name}" Grid.Row="2" Grid.Column="0" ></Label>
+        <TextBox Text="{Binding SceneEntity.Name}" Grid.Row="2" Grid.Column="1" ></TextBox>
     </Grid>
 </UserControl>
