--- a/VirtualScene.EntityPresentationComponents.WPF/Views/StageContentView.xaml
+++ b/VirtualScene.EntityPresentationComponents.WPF/Views/StageContentView.xaml
@@ -23,6 +23,12 @@
 
                     </i:InvokeCommandAction>
                 </i:EventTrigger>
+                <i:EventTrigger EventName="PreviewMouseLeftButtonUp" >
+                    <i:InvokeCommandAction Command="{Binding SelectItemsCommand}" 
+                                           CommandParameter="{Binding ElementName=StageListTreeView, Path=SelectedItems}" >
+
+                    </i:InvokeCommandAction>
+                </i:EventTrigger>
             </i:Interaction.Triggers>
         </ListBox>
     </StackPanel>
