--- a/VirtualScene.EntityPresentationComponents.WPF/Views/Controls/SceneEntityContentView.xaml
+++ b/VirtualScene.EntityPresentationComponents.WPF/Views/Controls/SceneEntityContentView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VirtualScene.EntityPresentationComponents.WPF.Views.SceneEntityContentView"
+﻿<UserControl x:Class="VirtualScene.EntityPresentationComponents.WPF.Views.Controls.SceneEntityContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,18 +9,16 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="{Binding TitleColumnWidth}"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
             <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
-            <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
         </Grid.RowDefinitions>
-        <Label Content="{Binding Title}" Background="#FFF5E7E7"  Grid.Row="0" Grid.ColumnSpan="2" ></Label>
-        <Label Content="{x:Static entityProperties:Resources.Title_Description}" Grid.Row="1" Grid.Column="0" ></Label>
-        <TextBox Text="{Binding Path=SceneEntity.Description, Mode=OneWay}" IsReadOnly="True" Grid.Row="1" Grid.Column="1" ></TextBox>
-        <Label Content="{x:Static properties:Resources.Title_Name}" Grid.Row="2" Grid.Column="0" ></Label>
-        <TextBox Text="{Binding SceneEntity.Name}" Grid.Row="2" Grid.Column="1" ></TextBox>
+        <Label Content="{x:Static entityProperties:Resources.Title_Description}" Grid.Row="0" Grid.Column="0" ></Label>
+        <TextBox Text="{Binding Path=SceneEntity.Description, Mode=OneWay}" IsReadOnly="True" Grid.Row="0" Grid.Column="1" ></TextBox>
+        <Label Content="{x:Static properties:Resources.Title_Name}" Grid.Row="1" Grid.Column="0" ></Label>
+        <TextBox Text="{Binding SceneEntity.Name}" Grid.Row="1" Grid.Column="1" ></TextBox>
     </Grid>
 </UserControl>
