--- a/VirtualScene.EntityPresentationComponents.WPF/Views/SpurGearEntityContentView.xaml
+++ b/VirtualScene.EntityPresentationComponents.WPF/Views/SpurGearEntityContentView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="VirtualScene.EntityPresentationComponents.WPF.Views.SphereEntityContentView"
-             xmlns:controls="clr-namespace:VirtualScene.EntityPresentationComponents.WPF.Views.Controls"  
+﻿<UserControl x:Class="VirtualScene.EntityPresentationComponents.WPF.Views.SpurGearEntityContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:entityProperties="clr-namespace:VirtualScene.EntityPresentationComponents.WPF.Properties"
+             xmlns:controls="clr-namespace:VirtualScene.EntityPresentationComponents.WPF.Views.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel>
@@ -19,8 +19,10 @@
                 <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
                 <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
             </Grid.RowDefinitions>
-            <Label Content="{x:Static entityProperties:Resources.Title_Radius}" Grid.Row="0" Grid.Column="0" ></Label>
-            <TextBox Text="{Binding SceneEntity.Radius}" Grid.Row="0" Grid.Column="1" ></TextBox>
+            <Label Content="{x:Static entityProperties:Resources.Title_Pitch_Diameter}" Grid.Row="0" Grid.Column="0" ></Label>
+            <TextBox Text="{Binding SceneEntity.PitchDiameter}" Grid.Row="0" Grid.Column="1" ></TextBox>
+            <Label Content="{x:Static entityProperties:Resources.Title_Height}" Grid.Row="1" Grid.Column="0" ></Label>
+            <TextBox Text="{Binding SceneEntity.Height}" Grid.Row="1" Grid.Column="1" ></TextBox>
         </Grid>
-    </StackPanel>
-</UserControl>
+
+    </StackPanel></UserControl>
