--- a/VirtualScene.EntityPresentationComponents.WPF/Views/SpurGearEntityContentView.xaml
+++ b/VirtualScene.EntityPresentationComponents.WPF/Views/SpurGearEntityContentView.xaml
@@ -6,7 +6,7 @@
              xmlns:entityProperties="clr-namespace:VirtualScene.EntityPresentationComponents.WPF.Properties"
              xmlns:controls="clr-namespace:VirtualScene.EntityPresentationComponents.WPF.Views.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="400" d:DesignWidth="300">
     <StackPanel>
         <Label Content="{Binding Title}" Background="#FFF5E7E7" MinHeight="26" ></Label>
         <controls:SceneEntityContentView />
@@ -18,11 +18,38 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
                 <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
+                <RowDefinition Height="Auto" MinHeight="26"></RowDefinition>
             </Grid.RowDefinitions>
-            <Label Content="{x:Static entityProperties:Resources.Title_Pitch_Diameter}" Grid.Row="0" Grid.Column="0" ></Label>
-            <TextBox Text="{Binding SceneEntity.PitchDiameter}" Grid.Row="0" Grid.Column="1" ></TextBox>
-            <Label Content="{x:Static entityProperties:Resources.Title_Height}" Grid.Row="1" Grid.Column="0" ></Label>
-            <TextBox Text="{Binding SceneEntity.Height}" Grid.Row="1" Grid.Column="1" ></TextBox>
+            <Label Content="{x:Static entityProperties:Resources.Title_Face_Width}" Grid.Row="0" Grid.Column="0" ></Label>
+            <TextBox Text="{Binding SceneEntity.FaceWidth}" Grid.Row="0" Grid.Column="1" ></TextBox>
+            <Label Content="{x:Static entityProperties:Resources.Title_Number_of_Teeth}" Grid.Row="1" Grid.Column="0" ></Label>
+            <TextBox Text="{Binding SceneEntity.NumberOfTeeth}" Grid.Row="1" Grid.Column="1" ></TextBox>
+            <Label Content="{x:Static entityProperties:Resources.Title_Outside_Diameter}" Grid.Row="2" Grid.Column="0" ></Label>
+            <TextBox Text="{Binding SceneEntity.OutsideDiameter}" Grid.Row="2" Grid.Column="1" ></TextBox>
+            <Label Content="{x:Static entityProperties:Resources.Title_Pitch_Diameter}" Grid.Row="3" Grid.Column="0" ></Label>
+            <TextBox Text="{Binding SceneEntity.PitchDiameter}" Grid.Row="3" Grid.Column="1" ></TextBox>
+            <Label Content="{x:Static entityProperties:Resources.Title_Diametral_Pitch}" Grid.Row="4" Grid.Column="0" ></Label>
+            <Label Content="{Binding SceneEntity.SceneElement.DiametralPitch}" ContentStringFormat="F2" Grid.Row="4" Grid.Column="1" ></Label>
+            <Label Content="{x:Static entityProperties:Resources.Title_Addendum}" Grid.Row="5" Grid.Column="0" ></Label>
+            <Label Content="{Binding SceneEntity.SceneElement.Addendum}" ContentStringFormat="F2" Grid.Row="5" Grid.Column="1" ></Label>
+            <Label Content="{x:Static entityProperties:Resources.Title_Dedendum}" Grid.Row="6" Grid.Column="0" ></Label>
+            <Label Content="{Binding SceneEntity.SceneElement.Dedendum}" ContentStringFormat="F2" Grid.Row="6" Grid.Column="1" ></Label>
+            <Label Content="{x:Static entityProperties:Resources.Title_Working_Depth}" Grid.Row="7" Grid.Column="0" ></Label>
+            <Label Content="{Binding SceneEntity.SceneElement.WorkingDepth}" ContentStringFormat="F2" Grid.Row="7" Grid.Column="1" ></Label>
+            <Label Content="{x:Static entityProperties:Resources.Title_Whole_Depth}" Grid.Row="8" Grid.Column="0" ></Label>
+            <Label Content="{Binding SceneEntity.SceneElement.WholeDepth}" ContentStringFormat="F2" Grid.Row="8" Grid.Column="1" ></Label>
+            <Label Content="{x:Static entityProperties:Resources.Title_Tooth_Thickness}" Grid.Row="9" Grid.Column="0" ></Label>
+            <Label Content="{Binding SceneEntity.SceneElement.ToothThickness}" ContentStringFormat="F2" Grid.Row="9" Grid.Column="1" ></Label>
+            <Label Content="{x:Static entityProperties:Resources.Title_Circular_Pitch}" Grid.Row="10" Grid.Column="0" ></Label>
+            <Label Content="{Binding SceneEntity.SceneElement.CircularPitch}" ContentStringFormat="F2" Grid.Row="10" Grid.Column="1" ></Label>
         </Grid>
 
     </StackPanel></UserControl>
